<resources>
    <string name="app_name">خوي</string>
    <string name="next">التالي</string>
    <string name="error">خطأ</string>
    <string name="Ok">حسنا</string>
    <string name="error_message_empty">حقل النص مطلوب</string>
    <string name="error_phone_empty">حقل رقم الجوال مطلوب</string>
    <string name="error_full_name_empty">حقل الاسم مطلوب</string>
    <string name="resend_code">اعادة ارسال</string>
    <string name="you_can_resend_code_after">بامكانك ارسال الكود بعد</string>
    <string name="error_verification_empty">حقل كود التحقق مطلوب</string>
    <string name="create_new_account">انشاء حساب جديد</string>
    <string name="skip">تخطي</string>
    <string name="just_now">الآن</string>
    <string name="a_minute_ago">منذ دقيقة</string>
    <string name="minute_ago">دقيقة</string>
    <string name="an_hour_ago">مند ساعة</string>
    <string name="hours_ago">ساعة</string>
    <string name="yesterday">أمس</string>
    <string name="days_ago">يوم</string>
    <string name="please_wait">الرجاء الانتظار</string>
    <string name="login">التسجيل</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="code_verification">التحقق من الرمز</string>
    <string name="code_verification_content">أدخل الرمز الذي أرسلناه إلى رقم هاتفك التالي: </string>
    <string name="verify_now">تحقق من الرمز</string>
    <string name="profile_information">البيانات الشخصية</string>
    <string name="save_changes">حفظ التغييرات</string>
    <string name="full_name">الاسم كامل</string>
    <string name="do_you_have_car">هل تمتلك سيارة؟</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="car_type">نوع السيارة</string>
    <string name="car_model">موديل السيارة</string>
    <string name="car_color">لون السيارة</string>
    <string name="car_plate">رقم السيارة</string>
    <string name="error_email_empty">حقل البريد الالكتروني مطلوب</string>
    <string name="error_email_invalid">البريد الالكتروني غير صحيح</string>
    <string name="error_car_type_empty">حقل نوع السيارة مطلوب</string>
    <string name="error_car_model_empty">حقل موديل السيارة مطلوب</string>
    <string name="error_car_color_empty">حقل لون السيارة مطلوب</string>
    <string name="error_car_plate_empty">حقل رقم السيارة مطلوب</string>
    <string name="home">الرئيسية</string>
    <string name="orders">الطلبات</string>
    <string name="notifications">التنبيهات</string>
    <string name="settings">الاعدادت</string>
    <string name="profile">الملف الشخصي</string>
    <string name="wallet">المحفظة</string>
    <string name="about_us">من نحن</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="share_app">مشاركة التطبيق</string>
    <string name="terms_conditions">الشروط والأحكام</string>
    <string name="terms_conditions_underline"><u>الشروط والأحكام</u></string>
    <string name="logout">تسجيل الخروج</string>
    <string name="privacy_policy">سياسة الخصوصية</string>
    <string name="subject">العنوان</string>
    <string name="send">ارسال</string>
    <string name="my_wallet">محفظتي</string>
    <string name="last_transaction_date">اخر عملية مالية</string>
    <string name="total_balance">الرصيد الإجمالي</string>
    <string name="transactions">المعاملات المالية</string>
    <string name="show_details">عرض التفاصيل</string>
    <string name="orders_now">الطلبات الحالية</string>
    <string name="orders_completed">الطلبات المكتملة</string>
    <string name="orders_canceled">الطلبات الملغية</string>
    <string name="hi_khawi">مرحبا خَوي</string>
    <string name="search_for_place">البحث عن مكان</string>
    <string name="your_location">حدد موقعك</string>
    <string name="deliver_form">انشاء رحلة</string>
    <string name="join_form">الانضمام لرحلة</string>
    <string name="car_information">معلومات السيارة</string>
    <string name="trip_time">وقت الرحلة</string>
    <string name="trip_date">تاريخ الرحلة</string>
    <string name="request_details">تفاصيل الطلب</string>
    <string name="show_map">عرض على الخريطة</string>
    <string name="trip_days">أيام الرحلة</string>
    <string name="saturday">سبت</string>
    <string name="sunday">أحد</string>
    <string name="monday">اثنين</string>
    <string name="tuesday">ثلاثاء</string>
    <string name="wednesday">أربعاء</string>
    <string name="thursday">خميس</string>
    <string name="friday">جمعة</string>
    <string name="driver_information">معلومات السائق</string>
    <string name="seat_available">عدد المقاعد المتاحة</string>
    <string name="driver_note">ملاحظات السائق</string>
    <string name="person_information">معلومات الشخص</string>
    <string name="seat_request">عدد المقاعد المطلوبة</string>
    <string name="note">ملاحظات</string>
    <string name="join_now">انضم الآن</string>
    <string name="apply_deliver">تقديم عرض للرحلة</string>
    <string name="success_request_deliver">تم تقديم عرض للرحلة بنجاح</string>
    <string name="show_request_details">عرض تفاصيل الطلب</string>
    <string name="success_request_join">تم الانضمام للرحلة بنجاح</string>
    <string name="join_offer">عرض للرحلة</string>
    <string name="message">النص</string>
    <string name="add_note_optional">اضف ملاحظة (اختياري)</string>
    <string name="minimum_price">أقل سعر</string>
    <string name="maximum_price">أعلى سعر</string>
    <string name="apply_join">الانضمام لرحلة</string>
    <string name="trip_subject">عنوان الرحلة</string>
    <string name="select_the_destination_on_the_map">حدد الوجهة على الخريطة</string>
    <string name="is_the_trip_daily">هل الرحلة بشكل يومي؟</string>
    <string name="trip_first_date">تاريخ أول رحلة</string>
    <string name="maximum_seats">الحد الأقصى للركاب في الرحلة</string>
    <string name="confirm_to">الموافقة على</string>
    <string name="set_price">حدد السعر</string>
    <string name="seats_counts">عدد الركاب</string>
    <string name="success_request_join_create">تم الانضمام للرحلة بنجاح</string>
    <string name="success_request_deliver_create">تم انشاء رحلة بنجاح</string>
    <string name="join_trip">الانضمام إلى الرحلة</string>
    <string name="price_must_between">يجب ان يكون السعر بين</string>
    <string name="currency">SAR</string>
    <string name="success_request_join_applied">تم تقديم انضمام لرحلة بنجاح</string>
    <string name="destination_selected">تم تحديد الوجهة</string>
    <string name="requests_join">طلبات الانضمام للرحلة</string>
    <string name="price">السعر</string>
    <string name="accept_order">قبول الطلب</string>
    <string name="reject_order">رفض الطلب</string>
    <string name="rate">تقييم</string>
    <string name="select_destination">تحديد الوجهة</string>
    <string name="destination_route">مسار الرحلة</string>
    <string name="start_destination">نقطة البداية</string>
    <string name="end_destination">نقطة النهاية</string>
    <string name="select_start">حدد نقطة البداية</string>
    <string name="select_end">حدد نقطة النهاية</string>
    <string name="success">تم بنجاح</string>
    <string name="error_trip_subject_empty">حقل عنوان الرحلة مطلوب</string>
    <string name="error_price_empty">حقل السعر مطلوب</string>
    <string name="error_select_a_day">يرجى اختيار على الاقل يوم واحد</string>
    <string name="error_date_empty">حقل التاريخ مطلوب</string>
    <string name="error_time_empty">حقل الوقت مطلوب</string>
    <string name="error_seats_empty">حقل عدد الركاب مطلوب</string>
    <string name="from">من</string>
    <string name="to">إلى</string>
    <string name="trip_title">عنوان الرحلة</string>
    <string name="seats">مقعد</string>
    <string name="trip_number">رقم الرحلة</string>
    <string name="finished">مكتمل</string>
    <string name="cancelled">ملغي</string>
    <string name="open_order">طلب مفتوح</string>
    <string name="amount_trip_number">رسوم رحلة رقم</string>
    <string name="add_amount">اضف رصيد</string>
    <string name="amount">الرصيد</string>
    <string name="error_amount_empty">حقل الرصيد مطلوب</string>
    <string name="accept_terms">يجب الموافقة على الشروط والاحكام</string>
    <string name="new_order">طلب جديد</string>
    <string name="are_you_want_logout">هل انت تريد تسجيل الخروج</string>
    <string name="alert">تنبيه</string>
    <string name="close_">الغاء</string>
    <string name="added_amount">اضافة رصيد</string>
    <string name="start_trip">بدء الرحلة</string>
    <string name="cancel_trip">الغاء الرحلة</string>
    <string name="cancel_reason">سبب الالغاء</string>
    <string name="end_trip">انهاء الرحلة</string>
    <string name="are_you_want_accept">هل تريد قبول العملية؟</string>
    <string name="are_you_want_reject">هل تريد رفض العملية؟</string>
    <string name="requests_delivery">الرحلات</string>
    <string name="offer_price">السعر المرسل</string>
    <string name="offer_accepted">العروض المقبولة</string>
    <string name="api_key">AIzaSyBG2O9nhPoHxemxdMh4NX8pBa32cd0Kc1Q</string>
    <string name="error_paymet">حدث خطأ اثناء عملية الدفع يرجى المحاولة مرة أخرى</string>
    <string name="call">اتصال</string>
    <string name="tracking_location">تتبع المكان</string>
    <string name="coupon">الكوبون</string>
    <string name="trip_subject_optional">عنوان الرحلة (اختياري)</string>
    <string name="car_front_image">صورة السيارة من الامام</string>
    <string name="car_back_image">صورة السيارة من الخلف</string>
    <string name="car_right_image">صورة السيارة من اليمين</string>
    <string name="car_left_image">صورة السيارة من اليسار</string>
    <string name="identity_image">صورة الهوية</string>
    <string name="license_image">صورة الرخصة</string>
    <string name="error_identity_empty">حقل صورة الهوية مطلوبة</string>
    <string name="error_license_empty">حقل صورة الرخصة مطلوبة</string>
    <string name="error_car_front_empty">حقل صورة السيارة من الامام مطلوبة</string>
    <string name="error_car_back_empty">حقل صورة السيارة من الخلف مطلوبة</string>
    <string name="error_car_right_empty">حقل صورة السيارة من اليمين مطلوبة</string>
    <string name="error_car_left_empty">حقل صورة السيارة من اليسار مطلوبة</string>
    <string name="you_need_a_car">يجب ان يكون لديك سيارة لاستخدام هذه الخاصية</string>
    <string name="reject_reason">سبب الرفض</string>
    <string name="image_was_attached">تم اختيار الصورة</string>
    <string name="request_sent_success">تم تقديم طلبك .. سيتم مراجعة طلبك من قبل الادارة</string>
</resources>