<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_top_corner_16r">

    <EditText
        android:id="@+id/amountET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="top"
        android:hint="@string/amount"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:minHeight="56dp"
        android:padding="16dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/grey4"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/couponET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="top"
        android:hint="@string/coupon"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="56dp"
        android:padding="16dp"
        android:textColor="@color/textColor"
        android:textColorHint="@color/grey4"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/amountET" />

    <TextView
        android:id="@+id/sendBtn"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_margin="24dp"
        android:background="@drawable/button_main"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/couponET" />


</androidx.constraintlayout.widget.ConstraintLayout>