<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/showDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_main"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            android:text="@string/show_details"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/rateOfferBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_main"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            android:text="@string/rate"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/callOfferBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_main"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            android:text="@string/call"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/acceptBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_main"
            android:backgroundTint="#46CF85"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            android:text="@string/accept_order"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/rejectBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_main"
            android:backgroundTint="#FF5B5B"
            android:gravity="center"
            android:paddingHorizontal="12dp"
            android:paddingVertical="6dp"
            android:text="@string/reject_order"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="gone" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:gravity="end"
            android:includeFontPadding="false"
            android:text="test"
            android:textColor="@color/textColor"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.willy.ratingbar.ScaleRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:srb_clearRatingEnabled="false"
            app:srb_clickable="false"
            app:srb_drawableEmpty="@drawable/ic_unselected_star"
            app:srb_drawableFilled="@drawable/ic_selected_star"
            app:srb_isIndicator="false"
            app:srb_numStars="5"
            app:srb_scrollable="false"
            app:srb_starHeight="14dp"
            app:srb_starPadding="2dp"
            app:srb_starWidth="14dp"
            app:srb_stepSize="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/profile_img"
        app:civ_border_color="@color/main"
        app:civ_border_width="1dp" />
</androidx.appcompat.widget.LinearLayoutCompat>