<?xml version="1.0" encoding="utf-8"?>
<layout>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="24dp"
            android:text="@string/profile_information"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/saveBtn"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/infoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImageIV"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/profile_img"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="0dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/editImageIV"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginBottom="6dp"
                        android:src="@drawable/edit_circle"
                        app:layout_constraintBottom_toBottomOf="@+id/profileImageIV"
                        app:layout_constraintEnd_toEndOf="@+id/profileImageIV" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/fullNameET"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bg_edit_text"
                    android:gravity="center_vertical"
                    android:hint="@string/full_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/grey4"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_edit_text"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/grey4"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/haveCarCheckBoxContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:text="@string/do_you_have_car"
                        android:textColor="@color/textColor"
                        android:textSize="14sp" />

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/haveCarCheckBox"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/checkbox_car"
                        android:button="@null"
                        android:clickable="false"
                        android:gravity="center_vertical" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/carInformationContainer"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/carTypeET"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_edit_text"
                        android:gravity="center_vertical"
                        android:hint="@string/car_type"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/grey4"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/carModelET"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_edit_text"
                        android:gravity="center_vertical"
                        android:hint="@string/car_model"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/grey4"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/carColorET"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/bg_edit_text"
                        android:gravity="center_vertical"
                        android:hint="@string/car_color"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/grey4"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/carPlateET"
                        android:layout_width="match_parent"
                        android:layout_height="52dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/bg_edit_text"
                        android:gravity="center_vertical"
                        android:hint="@string/car_plate"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/grey4"
                        android:textSize="15sp" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/saveBtn"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_main"
            android:elevation="5dp"
            android:gravity="center"
            android:text="@string/save_changes"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>