<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="24dp"
            android:text="@string/contact_us"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/fullNameET"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/grey4"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/title" />
        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/grey4"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/fullNameET" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/phoneContainer"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_border_grey_light_12r"
            android:gravity="center_vertical"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailET">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                app:ccpDialog_textColor="@color/textColor"
                app:ccp_contentColor="@color/textColor"
                app:ccp_defaultNameCode="SA"
                android:layoutDirection="ltr"
                app:ccp_showArrow="true"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="true"
                app:ccp_textGravity="CENTER"
                app:ccp_textSize="15sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#F1F1F1" />

            <EditText
                android:id="@+id/phoneNumberET"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:layoutDirection="ltr"
                android:gravity="center_vertical"
                android:hint="5X XXX XXXX"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:lines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/grey4"
                android:textSize="15sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <EditText
            android:id="@+id/messageET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="top"
            android:hint="@string/message"
            android:imeOptions="actionNone"
            android:inputType="textMultiLine"
            android:minHeight="150dp"
            android:padding="16dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/grey4"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/phoneContainer" />


        <TextView
            android:id="@+id/sendBtn"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_main"
            android:elevation="5dp"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>